2012-11-21  Kevin Ellis  <kevers@chromium.org>

        [chromium] Add flag to enable/disable touch adjustment at runtime.
        https://bugs.webkit.org/show_bug.cgi?id=102534

        Reviewed by Antonio Gomes.

        Add setting for enabling or disabling touch adjustment.
        For touch adjustemnt to apply, the compile option must
        also be enabled.

        * public/WebSettings.h:
        * src/WebSettingsImpl.cpp:
        (WebKit::WebSettingsImpl::setEnableTouchAdjustment):
        (WebKit):
        * src/WebSettingsImpl.h:
        (WebSettingsImpl):

2012-11-21  Dan Carney  <dcarney@google.com>

        IDBRequestTest needs a v8 context
        https://bugs.webkit.org/show_bug.cgi?id=102941

        Reviewed by Jochen Eisinger.

        Added v8 context to IDBRequestTest tests.

        * tests/IDBRequestTest.cpp:
        (IDBRequestTest):
        (WebKit::IDBRequestTest::IDBRequestTest):
        (WebKit::IDBRequestTest::context):
        (WebKit::IDBRequestTest::scriptExecutionContext):
        (WebKit):
        (WebKit::TEST_F):

2012-11-21  Peter Beverloo  <peter@chromium.org>

        Unreviewed.  Rolled DEPS.

        * DEPS:

2012-11-21  Allan Sandfeld Jensen  <allan.jensen@digia.com>

        Disambiguate innerNodeFramePoint and mainFramePoint
        https://bugs.webkit.org/show_bug.cgi?id=98139

        Reviewed by Julien Chaffraix.

        * src/ChromeClientImpl.cpp:
        (WebKit::ChromeClientImpl::mouseDidMoveOverElement):
        * src/ContextMenuClientImpl.cpp:
        (WebKit::selectMisspelledWord):
        (WebKit::ContextMenuClientImpl::getCustomMenuFromDefaultItems):
        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::characterIndexForPoint):

2012-11-21  W. James MacLean  <wjmaclean@chromium.org>

        [chromium] Link highlight should display for at least 100ms, and fadeout on GestureTap/Longpress.
        https://bugs.webkit.org/show_bug.cgi?id=102823

        Reviewed by Adrienne Walker.
