@@ -28,64 +28,23 @@
 #include "IDBRequest.h"
 
 #include "DOMStringList.h"
-#include "Document.h"
-#include "Frame.h"
-#include "FrameTestHelpers.h"
 #include "IDBCursorBackendInterface.h"
 #include "IDBDatabaseBackendImpl.h"
 #include "IDBTransactionCoordinator.h"
-#include "WebFrame.h"
-#include "WebFrameImpl.h"
-#include "WebView.h"
 
 #include <gtest/gtest.h>
 
 #if ENABLE(INDEXED_DATABASE)
 
 using namespace WebCore;
-using namespace WebKit;
 
 namespace {
 
-class IDBRequestTest : public testing::Test {
-public:
-    IDBRequestTest()
-        : m_webView(0)
-    {
-    }
-
-    void SetUp() OVERRIDE
-    {
-        m_webView = FrameTestHelpers::createWebViewAndLoad("about:blank");
-        m_webView->setFocus(true);
-    }
-
-    void TearDown() OVERRIDE
-    {
-        m_webView->close();
-    }
-
-    v8::Handle<v8::Context> context()
-    {
-        return static_cast<WebFrameImpl*>(m_webView->mainFrame())->frame()->script()->mainWorldContext();
-    }
-
-    ScriptExecutionContext* scriptExecutionContext()
-    {
-        return static_cast<WebFrameImpl*>(m_webView->mainFrame())->frame()->document();
-    }
-
-private:
-    WebView* m_webView;
-};
-
-TEST_F(IDBRequestTest, EventsAfterStopping)
+TEST(IDBRequestTest, EventsAfterStopping)
 {
-    v8::HandleScope handleScope;
-    v8::Context::Scope scope(context());
-
+    ScriptExecutionContext* context = 0;
     IDBTransaction* transaction = 0;
-    RefPtr<IDBRequest> request = IDBRequest::create(scriptExecutionContext(), IDBAny::createInvalid(), transaction);
+    RefPtr<IDBRequest> request = IDBRequest::create(context, IDBAny::createInvalid(), transaction);
     EXPECT_EQ(request->readyState(), "pending");
     request->stop();
 
@@ -100,13 +59,11 @@ TEST_F(IDBRequestTest, EventsAfterStopping)
     request->onSuccess(IDBKey::createInvalid(), IDBKey::createInvalid(), SerializedScriptValue::nullValue());
 }
 
-TEST_F(IDBRequestTest, AbortErrorAfterAbort)
+TEST(IDBRequestTest, AbortErrorAfterAbort)
 {
-    v8::HandleScope handleScope;
-    v8::Context::Scope scope(context());
-
+    ScriptExecutionContext* context = 0;
     IDBTransaction* transaction = 0;
-    RefPtr<IDBRequest> request = IDBRequest::create(scriptExecutionContext(), IDBAny::createInvalid(), transaction);
+    RefPtr<IDBRequest> request = IDBRequest::create(context, IDBAny::createInvalid(), transaction);
     EXPECT_EQ(request->readyState(), "pending");
 
     // Simulate the IDBTransaction having received onAbort from back end and aborting the request:
